--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "vue": "^1.0.21",
-    "babel-runtime": "^6.0.0"
+    "babel-runtime": "^6.0.0",
+    "vue-router": "^0.7.13",
+    "vue-resource": "^1.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -24,6 +26,8 @@
     "babel-register": "^6.0.0",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.23.0",
+    "stylus-loader": "^2.1.0",
+    "stylus": "^0.52.4",
     "eslint": "^2.10.2",
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-loader": "^1.3.0",
